# CMake2015

./: .gitignore  build.bat  build.sh  clean.bat  clean.sh
FooBar/: CMakeLists.txt  FooBarConfig.cmake.in  FooBarConfigVersion.cmake.in
FooBar/bar/: CMakeLists.txt  bar.c
FooBar/cmake/: SetInstallDir.cmake
FooBar/foo/: CMakeLists.txt  exports_foo.h  foo.c  foo.h
FooBarUser/: CMakeLists.txt  FooBarUserConfig.cmake.in  FooBarUserConfigVersion.cmake.in
FooBarUser/cmake/: SetInstallDir.cmake  SetRPath.cmake  cmake_uninstall.cmake.in
FooBarUser/src/: CMakeLists.txt  client.c  client.h
doc/: find_package.tex
